test/error/syntax/err1.rzy


component
  Err1
    input
      inp();
      
    output
      out();
    
  implementation elementary
    
    function inp()
      out.foo();      // .foo does not exist
    end
    
  end

